--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Store#index</h1>
-<p>Find me in app/views/store/index.html.erb</p>
+<% if notice %> 
+	<aside id="notice"><%=notice %></aside>
+<% end -%>
+
+
+<h1>Eric's Photo Store :D</h1>
+
+<ul class="catalog">
+  <% cache @products do %> 
+	<% cache @products.each do |product| %>
+	  <% cache @products do %>
+		  	<li>
+		  		<%= image_tag(product.image_url) %>
+		  		<h2><%= product.title %></h2>
+		  		<p><%= sanitize(product.description) %></p>
+		  		<div class="price"><%= number_to_currency(product.price) %></div>
+		  	</li>
+	  <% end -%>
+    <% end -%>
+  <% end -%>
+</ul>
