--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Eric's Photo Store t|:D</title>
+    <title>Eric's Photo Store :D</title>
     <%= csrf_meta_tags %>
 
 
