--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -83,4 +83,14 @@ header.main {
   main {
   	padding: 0.5em;
   }
+  .notice, #notice {
+    background: #fff;
+    border-radius: 0.5em;
+    border: solid 0.177em #882;
+    color: #882;
+    font-weight: 600;
+    margin-bottom: 1em;
+    padding: 1em 1.414em;
+    text-align: center;
+  }
 }
