--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -8,23 +8,21 @@
 <p><%= @message %></p>
 
 <ul class="catalog">
-  <% cache @products do %> 
-	<% @products.each do |product| %>
-	  <% cache product do %>
-		  	<li>
-		  		<%= image_tag(product.image_url) %>
-		  		<h2><%= product.title %></h2>
-		  		<p><%= sanitize(product.description) %></p>
-		  		<div><%= number_to_currency(product.price) %>
-		  			<%= button_to 'Add to Cart', line_items_path(product_id: product) %>
-		  		</div>
-
-		  	</li>
-	  <% end -%>
-    <% end -%>
-  <% end -%>
+  <% cache @products do %>
+    <% @products.each do |product| %>
+      <% cache product do %>
+        <li>
+          <%= image_tag(product.image_url) %>
+          <h2><%= product.title %></h2>
+          <p>
+            <%= sanitize(product.description) %>
+          </p>
+          <div class="price">
+            <%= number_to_currency(product.price) %>
+            <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
+          </div>
+        </li>
+      <% end %>
+    <% end %>
+  <% end %>
 </ul>
-
-
-
-
