--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New Order</h1>
-
 <section class="depot_form">
-	<h2>Please Enter Your Details bitch!</h2>
-	<%= render 'form', order: @order %>
+  <h1>Please Enter Your Deets bitch!</h1>
+  <%= render 'form', order: @order %>
 </section>
+
+<%= javascript_pack_tag("pay_type") %>
